--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@ industries.
         <br />
         E-mail：  &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;dqy@sunfieldproducts.cn
         <br />
-        Address：&nbsp;&nbsp; &nbsp;&nbsp; 5 Tangmao Road, Huishan District, Wuxi, Jiangsu Province, China
+        Address：&nbsp;&nbsp; &nbsp;&nbsp; Xichang Road, Yanqiao Street, Wuxi City, Jiangsu Province, China, 214171
         <br />
         <br />
         <br />
