--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <h3>〠 About Us</h3><br />
         <pre>
 
-      1 Sunfield Products Solutions is a quality manufacturer of components for a range of industries and 
+       Sunfield Products Solutions is a quality manufacturer of components for a range of industries and 
 applications. Based in Wuxi China,we have a production facility of 20.000 m2 housing 350 staff, including 
 65 engineers and technicians.
 
@@ -62,7 +62,7 @@ industries.
         <br />
         E-mail：  &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;dqy@sunfieldproducts.cn
         <br />
-        Address：&nbsp;&nbsp; &nbsp;&nbsp; Xichang Road, Yanqiao Street, Wuxi City, Jiangsu Province, China, 214171
+        Address：&nbsp;&nbsp; &nbsp;&nbsp; No. 1 Xichang Road, Huishan District Wuxi City, Jiangsu Province, China 214171
         <br />
         <br />
         <br />
