--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@ industries.
         <br />
         E-mail：  &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;dqy@sunfieldproducts.cn
         <br />
-        Address：&nbsp;&nbsp; &nbsp;&nbsp; No. 1 Xichang Road, Huishan District Wuxi City, Jiangsu Province, China 214171
+        Address：&nbsp;&nbsp; &nbsp;&nbsp; No. 1 Xichang Road, Huishan District, Wuxi City, Jiangsu Province, China 214171
         <br />
         <br />
         <br />
