--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@ industries.
   </div>
   <div id="footer">
     <div class="wrapper">
-      <div class="copyright">Copyright &#169; 2013 Wuxi Sunfield Products co.,Ltd . All rights reserved .| 苏ICP备11047446号-2</div>
+      <div class="copyright">Copyright &#169; 2013-2016 Wuxi Sunfield Products co.,Ltd . All rights reserved .| 苏ICP备11047446号-2</div>
     </div>
   </div>
 </html>
